# duckdb-dbt

./: .env.example  .env.template  .gitignore  Makefile  README.md  app.py  dbt_lineage_flow.py  docker-compose.yml  list_catalog.py  prefect.yaml  pyproject.toml  query_iceberg.py  streamlit_dashboard.py  streamlit_lineage.py
.github/workflows/: ci.yml  dbt.yml
benchmarks/: .gitignore  __init__.py  generate_data.py  run_benchmark.py
blog/: iceberg-vs-parquet-benchmarks.md
config/: storage.yaml
dbt/: dbt_project.yml  profiles.yml
dbt/models/: schema.yml
dbt/models/marts/: dim_stations.sql  extreme_weather_events.sql  fact_daily_weather.sql  fact_observations.sql
dbt/models/staging/: stg_observations.sql
docs/: CLAUDE.md
examples/: test_catalog.py
ingestion/: ingestion.py  ingestion_service.py  weather_api.py
scripts/: deploy_flows.py  run_and_watch.py  run_with_ui.sh
src/catalog/: rest_server.py
src/flows/: __init__.py  dbt_transformations.py  demo_flow.py  main_pipeline.py  weather_ingestion.py
src/ingestion/: __init__.py  config.py  fetch_observations.py  fetch_stations.py  iceberg_manager.py  write_observations.py
tests/: README.md  test_config.py
visualization/pages/: Landing_Page.py  Overall_Metrics.py
